--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,14 @@ authors = [
     { name = "Martin", email = "lotzma@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "pathlib>=1.0.1",
+    "polars>=1.23.0",
+    "pytest>=8.3.4",
+    "pytz>=2025.1",
+    "ruff>=0.9.9",
+    "typing>=3.10.0.0",
+]
 
 [project.scripts]
 dspy = "dspy:main"
