--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [project]
 name = "dspy"
 version = "0.1.0"
-description = "Add your description here"
+description = "DS Python System"
 readme = "README.md"
 authors = [
-    { name = "Martin", email = "lotzma@gmail.com" }
+    { name = "Martin", email = "martin@tripudium.tech" }
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "ipykernel>=6.29.5",
+    "ipython>=9.0.0",
+    "matplotlib>=3.10.1",
     "pathlib>=1.0.1",
     "polars>=1.23.0",
     "pytest>=8.3.4",
@@ -22,3 +25,6 @@ dspy = "dspy:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = []
