--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,14 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
-    "ipython>=9.0.0",
+    "ipython==8.32.0",
     "matplotlib>=3.10.1",
     "pathlib>=1.0.1",
     "polars>=1.23.0",
     "pytest>=8.3.4",
     "pytz>=2025.1",
     "ruff>=0.9.9",
+    "tqdm>=4.67.1",
     "typing>=3.10.0.0",
 ]
 
@@ -26,5 +27,12 @@ dspy = "dspy:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[dependency-groups]
-dev = []
+[tool.uv]
+dev-dependencies = ["pytest"]
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "--maxfail=1 --disable-warnings -q"
+testpaths = [
+    "tests",
+]
