--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,10 @@ dependencies = [
     "ipykernel>=6.29.5",
     "ipython==8.32.0",
     "matplotlib>=3.10.1",
+    "numpy>=2.2.3",
     "pathlib>=1.0.1",
     "polars>=1.23.0",
+    "pybit>=5.9.0",
     "pytest>=8.3.4",
     "pytz>=2025.1",
     "ruff>=0.9.9",
