--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,14 @@ dependencies = [
     "pytz>=2025.1",
     "ruff>=0.9.9",
     "tqdm>=4.67.1",
+    "trpy-data",
     "typing>=3.10.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "jupyterlab",
+    "ipykernel",
 ]
 
 [project.scripts]
@@ -31,6 +38,9 @@ build-backend = "hatchling.build"
 
 [tool.uv]
 dev-dependencies = ["pytest"]
+
+[tool.uv.sources]
+trpy-data = { path = "../trpy-data/dist/trpy_data-0.1.0-py3-none-any.whl" }
 
 [tool.pytest.ini_options]
 minversion = "6.0"
