--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ uv.lock
 .venv/
 env/
 
+# Environment variables with API keys
+.env
+
 # Optional local Python version setting (if you don't want to enforce it)
 .python-version
 
