--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "polars>=1.23.0",
     "pybit>=5.9.0",
     "pytest>=8.3.4",
+    "python-dotenv>=1.1.1",
     "pytz>=2025.1",
     "ruff>=0.9.9",
     "tardis-dev>=2.0.0a14",
