--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "numpy>=2.2.3",
     "pathlib>=1.0.1",
     "polars>=1.23.0",
+    "pyarrow>=20.0.0",
     "pybit>=5.9.0",
     "pytest>=8.3.4",
     "python-dotenv>=1.1.1",
